# FFoptimizer

./: .gitattributes  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  server.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/components/: Layout.tsx  compression-form.tsx  player.tsx
src/components/ui/: select.tsx
src/context/: gradient-background.tsx
src/pages/: Home.tsx
