[package]
name = "ffoptimizer"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37.0", features = ["process", "sync"] }
warp = "0.3.7"
tauri-plugin-dialog = "2.0.0-beta"
urlencoding = "2.1.3"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-localhost = "2.0.0-beta"
uuid = "1.8.0"
portpicker = "0.1.1"
